assets/css/main.css
html {
  font-size: 62.5%;
  height: 100%;
}

body {
  font-size: 1.6rem;
  font-family: 'Helvetica Neue', 'Arial', sans-serif;
  margin: 0 auto;
  line-height: 1.5;
  min-height: 100%;
}

body,
a {
  color: #454545;
}

table {
  border-collapse: collapse;
  margin: 0 auto;
}

table td,
table th {
  border: 1.5px solid #606060;
  text-align: center;
  padding: 10px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.125;
}

hr {
  background-color: #606060;
  border: 0;
  height: 1.5px;
  margin: 2rem 0;
}

img {
  max-width: 100%;
  height: auto;
}

figure {
  margin: 1.6rem 0;
}

figure figcaption {
  font-size: 1.4rem;
  font-style: italic;
  text-align: center;
  margin-top: 0.6rem;
  padding: 0 1rem;
}

.content {
  max-width: 64rem;
  margin: auto;
  padding: 2rem;
}

.content code,
.content pre {
  font-family: 'Monaco', monospace;
  background-color: #f8f8f8;
}

.content code {
  font-size: 1.5rem;
  padding: 0 0.4rem;
}

.content pre {
  display: block;
  white-space: pre;
  margin: 2rem 0;
  padding: 2rem;
  overflow-x: auto;
  word-break: break-all;
  word-wrap: break-word;
  border: thin solid #e4e4e4;
  border-radius: 3px;
}

.content pre code {
  padding: 0;
}

.link-nowrap-nodec {
  text-decoration: none;
  white-space: nowrap;
}

.link-nowrap-nodec:hover {
  text-decoration: underline;
}

.link-fave-heart {
  text-decoration: none;
  color: red;
}

.link-fave-heart:hover {
  color: darkred;
}

.post-list {
  display: grid;
  row-gap: 0.5rem;
  margin-right: -3rem;
}

.post-list > .post-list-info {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-right: 0.5rem;
}

.post-list > .post-list-date {
  white-space: pre;
}

.post-list > .post-list-misc {
  text-align: center;
}

.post-header > .post-title {
  margin: 0 0 0.3rem 0;
  font-size: 3rem;
  line-height: 1.15;
}

.post-header > .post-meta {
  font-size: 1.5rem;
  color: #606060;
}

.navbar {
  top: 0;
  z-index: 998;
  position: sticky;
  background-color: #fff;
  border-bottom: 1.5px solid #606060;
}

.navbar-content {
  display: grid;
  grid-template-columns: 0.3fr 1.6fr 0.3fr;
  max-width: 64rem;
  margin: auto;
  z-index: 999;
  padding: 2.2rem 2rem 1.6rem 2rem;
}

.navbar-content .navbar-title {
  display: flex;
  align-items: center;
  font-size: 1.85rem;
  margin: 0;
  white-space: nowrap;
}

.navbar-content > .navbar-internal-links {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  list-style: none;
  text-transform: capitalize;
  margin: 0;
  padding: 0;
}

.navbar-content > .navbar-external-links {
  display: flex;
  align-items: center;
}

.navbar-external-links > .navbar-external-link {
  padding: 0.2rem 0 0 0.6rem;
}

.navbar-external-links > .navbar-external-link svg {
  fill: #949494;
  width: 1.4em;
  height: 1.4em;
}

.navbar-external-links > .navbar-external-link svg:hover {
  fill: #222;
}

blockquote,
.notice,
.warning {
  background-color: #f8f8f8;
  margin: 2rem 0;
  padding: 2rem;
  border: thin solid #e4e4e4;
  border-radius: 3px;
}

blockquote p,
.notice p,
.warning p {
  margin: 0;
}

.notice::before,
.warning::before {
  border-right: 2px solid #454545;
  border-bottom: 2px solid #454545;
  border-bottom-right-radius: 3px;
  display: block;
  text-align: center;
  position: relative;
  left: -2rem;
  top: -2rem;
  padding: 2px 10px;
  font-weight: bold;
}

.notice::before {
  content: "NOTE";
  background: #AACCFF;
  width: 5rem;
}

.warning::before {
  content: "WARNING";
  background: #FFEEAA;
  width: 8rem;
}

#writing {
  grid-template-columns: 2fr 0.2fr 3rem;
}

#reading {
  grid-template-columns: 1.2fr 0.75fr 0.25fr 3rem;
}

/* support for Edge */
@supports (-ms-ime-align: auto) {
  .navbar-content > .navbar-internal-links {
    justify-content: space-around;
    margin: 0 1.4rem;
  }
}

/* adjustment when very small */
@media screen and (max-width: 50rem) {
  .post-list {
    margin-right: inherit;
  }

  .post-list > .post-list-info {
    margin-right: inherit;
  }

  .post-list > .post-list-info a {
    white-space: normal;
    text-decoration: underline;
  }

  .post-list > .post-list-misc {
    text-align: left;
    padding-bottom: 2rem;
  }

  .navbar {
    position: static;
  }

  .navbar-content {
    display: block;
    padding-bottom: 2.4rem;
  }

  .navbar-content > .navbar-internal-links {
    display: block;
    margin: 0.4rem 0 1.6rem 0;
    text-decoration: underline;
  }

  .navbar-content > .navbar-external-links {
    justify-content: flex-start;
    height: 2.7rem;
  }

  .navbar-content > .navbar-external-links svg {
    height: 1.6em;
    width: 1.6em;
  }

  .navbar-external-links > .navbar-external-link:first-of-type {
   padding: 0.2rem 0 0 0;
 }

  #writing,
  #reading {
    gap: 0;
    grid-template-columns: 1fr;
  }
}

@media (prefers-color-scheme:dark) {
  body,
  .navbar {
    background-color: #000;
  }

  body,
  a {
    color: #d9d9d9;
  }

  .link-fave-heart:hover {
    color: #ff9999;
  }

  .post-header > .post-meta {
    color: #aaa;
  }

  .navbar-external-links > .navbar-external-link svg:hover {
    fill: #d9d9d9;
  }

  blockquote,
  .content code,
  .content pre,
  .notice,
  .warning {
    background-color: #222;
  }

  blockquote,
  .content pre,
  .notice,
  .warning {
    border: thin solid #606060;
  }

  .notice::before,
  .warning::before {
    background-color: #000;
    border-right: 1.5px solid #606060;
    border-bottom: 1.5px solid #606060;
  }

  .notice::before {
    color: #AACCFF;
  }

  .warning::before {
    color: #FFEEAA;
  }
}

